--- a/index.html
+++ b/index.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - penis</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="snoppe">
-<div class="penisKuk">
-  <div class="testikel ett"></div>
-  <div class="testikel två"></div>
-  <div class="testikel penis"></div>
-  <div class="testikel ollon">
-    <p> - </p>
-  </div>
-</div>
-</div>
-<div class="baken">
-  <div class="skinka ette"></div>
-  <div class="skinka tve"></div>
-  
-</div>
+<div id="container">
+        <div id="container-bg">
+            <div class="bg black"></div>
+            <div class="bg white"></div>
+        </div>
+        <div id="c-container">
+            <div id="ideas">
+                <div class="idea">
+                    <div id="idea-text-left" class="idea-text">Coming</div>
+                </div>
+                <div class="idea">
+                    <div id="idea-text-right" class="idea-text">Soon</div>
+                </div>
+            </div>
+            <canvas id="c">Извините.</canvas>
+        </div>
+
+    </div>
 <!-- partial -->
-  
+  <script src='TimelineMax.min.js'></script>
+<script src='TweenMax.min.js'></script>
+<script src='jquery-2.2.4.js'></script>
+<script src='browser.min.js'></script>
+<script src='imagesloaded.pkgd.min.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
