--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-c
+<video width="320" height="240" controls>
+  <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
+  Your browser does not support the video tag.
+</video>  
 <div id="container">
         <div id="container-bg">
             <div class="bg black"></div>
