--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<video width="320" height="240" controls>
+<video autoplay muted loop id="squashVideo">
   <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
   Your browser does not support the video tag.
 </video>  
