--- a/index.html
+++ b/index.html
@@ -7,34 +7,9 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<video autoplay muted loop id="squashVideo">
+<video autoplay playsinline muted loop id="squashVideo" >
   <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
   Your browser does not support the video tag.
 </video>  
-<div id="container">
-        <div id="container-bg">
-            <div class="bg black"></div>
-            <div class="bg white"></div>
-        </div>
-        <div id="c-container">
-            <div id="ideas">
-                <div class="idea">
-                    <div id="idea-text-left" class="idea-text">Coming</div>
-                </div>
-                <div class="idea">
-                    <div id="idea-text-right" class="idea-text">Soon</div>
-                </div>
-            </div>
-            <canvas id="c">Извините.</canvas>
-        </div>
-
-    </div>
-<!-- partial -->
-  <script src='TimelineMax.min.js'></script>
-<script src='TweenMax.min.js'></script>
-<script src='jquery-2.2.4.js'></script>
-<script src='browser.min.js'></script>
-<script src='imagesloaded.pkgd.min.js'></script><script  src="./script.js"></script>
-
 </body>
 </html>
