--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<video autoplay playsinline muted loop id="squashVideo" >
+
+<div id="container">
+  <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
   <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
-  Your browser does not support the video tag.
-</video>  
+  Sorry, your browser does not support HTML5 video.
+  </video>
+</div>
+
 </body>
 </html>
