--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 <!-- partial:index.partial.html -->
 
 <div id="container">
-  <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+  <h1>Looking for a squash<br>partner in Lisbon?</h1>
+  <h2>Join our community in WhatsApp</h2>
+  <a href="https://chat.whatsapp.com/DDqRcm2mjFiL8RY4iXvDOq">Join now!</a>
+  <img src="assets/qr.jpeg" alt="squash">
+</div>
+
+<video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
   <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
   Sorry, your browser does not support HTML5 video.
-  </video>
-</div>
+</video>
+
+
 
 </body>
 </html>
