--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
-  <source src="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squash.partners2.144.mp4?raw=true" type="video/mp4">
+  <source src="assets/squash.partners2.144.mp4" type="video/mp4">
   Sorry, your browser does not support HTML5 video.
 </video>
 
