--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="./style.css">
-
+  <title>Squash partners Lisbon</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 <body>
 <!-- partial:index.partial.html -->
