--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <img src="assets/qr.jpeg" alt="squash">
 </div>
 
-<video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
+<video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" playsinline>
   <source src="assets/squash.144.mp4" type="video/mp4">
   Sorry, your browser does not support HTML5 video.
 </video>
