--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
   Sorry, your browser does not support HTML5 video.
 </video>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZDC69QYVDH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-
+  gtag('config', 'G-ZDC69QYVDH');
+</script>
 </body>
 </html>
