[update] Fix button sizes on mobile phone and buttons container position :bug:

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div id="container">
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
-  <h2>Join our community in Telegram</h2>
+  <h2>Join our group in Telegram</h2>
   <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
   <img src="assets/qr.png" alt="squash">
 </div>
