[update] Fix text wrap :bug:

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     },
     ru: {
       translation: {
-        "key": `<h1>Ищете партнера <br>по сквошу в Лиссабоне?</h1>
+        "key": `<h1>Ищете партнера по<br>сквошу в Лиссабоне?</h1>
                 <h2>Присоединяйтесь к нашей группе в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Присоединяйся сейчас!</a>
                 <img src="assets/qr.png" alt="squash">
@@ -73,7 +73,7 @@
     },
     uk: {
       translation: {
-        "key": `<h1>Шукаєте партнера <br> по сквошу в Лісабоні?</h1>
+        "key": `<h1>Шукаєте партнера по<br>сквошу в Лісабоні?</h1>
                 <h2>Приєднуйтесь до нашої групи в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Приєднуйся зараз!</a>
                 <img src="assets/qr.png" alt="squash">
