[update] Added redirect by qr image click :fire:

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="./style.css">
   <title>Squash partners Lisbon</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <script>
+    function qrClickFunc() {
+      location.href = 'https://t.me/+BbHMaduO-aE1YmUy';
+    }
+  </script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -14,7 +19,7 @@
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
   <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-  <img src="assets/qr.png" alt="squash">
+  <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
 </div>
 
 <div class="lang-switcher-container">
@@ -49,7 +54,7 @@
         "key": `<h1>Looking for a squash<br>partner in Lisbon?</h1>
                 <h2>Join our group in Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
                 `
       }
     },
@@ -58,7 +63,7 @@
         "key": `<h1>Ищете партнера по<br>сквошу в Лиссабоне?</h1>
                 <h2>Присоединяйтесь к нашей группе в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Присоединяйся сейчас!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
                 `
       }
     },
@@ -67,7 +72,7 @@
         "key": `<h1>Procura um parceiro <br> de squash em Lisboa?</h1>
                 <h2>Participe do nosso grupo no Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Entrar!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
                `
       }
     },
@@ -76,7 +81,7 @@
         "key": `<h1>Шукаєте партнера по<br>сквошу в Лісабоні?</h1>
                 <h2>Приєднуйтесь до нашої групи в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Приєднуйся зараз!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
                 `
       }
     }
