[update] Provide basic updations for html file

--- a/index.html
+++ b/index.html
@@ -4,30 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./style.css">
-  <title>Squash partners Lisbon</title>
+  <title>Find squash partners and play! Lisbon</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <script>
-    function qrClickFunc() {
-      location.href = 'https://t.me/+BbHMaduO-aE1YmUy';
-    }
-  </script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
 
-<div id="container">
+<main id="container">
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
   <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-  <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
-</div>
+  <img src="assets/qr.png" alt="QR-Code">
+</main>
 
-<div class="lang-switcher-container">
+<section class="lang-switcher-container">
   <button class="lang-switcher-button" id="eng">Eng</button>
   <button class="lang-switcher-button" id="rus">Rus</button>
   <button class="lang-switcher-button" id="ukr">Ukr</button>
   <button class="lang-switcher-button" id="por">Por</button>
-</div>
+</section>
 
 <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0" playsinline>
   <source src="assets/squash.144.mp4" type="video/mp4">
@@ -54,7 +49,7 @@
         "key": `<h1>Looking for a squash<br>partner in Lisbon?</h1>
                 <h2>Join our group in Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
+                <img src="assets/qr.png" alt="squash">
                 `
       }
     },
@@ -63,7 +58,7 @@
         "key": `<h1>Ищете партнера по<br>сквошу в Лиссабоне?</h1>
                 <h2>Присоединяйтесь к нашей группе в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Присоединяйся сейчас!</a>
-                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
+                <img src="assets/qr.png" alt="squash">
                 `
       }
     },
@@ -72,7 +67,7 @@
         "key": `<h1>Procura um parceiro <br> de squash em Lisboa?</h1>
                 <h2>Participe do nosso grupo no Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Entrar!</a>
-                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
+                <img src="assets/qr.png" alt="squash">
                `
       }
     },
@@ -81,7 +76,7 @@
         "key": `<h1>Шукаєте партнера по<br>сквошу в Лісабоні?</h1>
                 <h2>Приєднуйтесь до нашої групи в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Приєднуйся зараз!</a>
-                <img src="assets/qr.png" alt="squash" onclick="qrClickFunc()">
+                <img src="assets/qr.png" alt="squash">
                 `
       }
     }
