--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <meta name="description" content="Do you want to find squash partners? Then join our community and play!"/>
   <meta name="keywords" content="squash, find, play, Lisbon, partners, players"/>
   <meta name="revised" content="Friday, October 7th, 2022, 1:15 pm" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="og:title" content="Squash partners Lisbon"/>
+  <meta name="og:image" content="assets/squashers.jpg"/>
+  <meta name="og:description" content="Do you want to find squash partners? Then join our community and play!"/>
   <link rel="stylesheet" href="./style.css">
   <title>Squash partners Lisbon</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -17,7 +21,7 @@
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
   <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-  <img src="assets/qr.png" alt="QR-Code">
+  <img src="assets/qr.webp" alt="QR-Code">
 </main>
 
 <section class="lang-switcher-container">
@@ -52,7 +56,7 @@
         "content": `<h1>Looking for a squash<br>partner in Lisbon?</h1>
                 <h2>Join our group in Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.webp" alt="squash">
                 `,
         "description": `Do you want to find squash partners? Then join our community and play!`
       }
@@ -62,7 +66,7 @@
         "content": `<h1>Ищете партнера по<br>сквошу в Лиссабоне?</h1>
                 <h2>Присоединяйтесь к нашей группе в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Присоединяйся сейчас!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.webp" alt="squash">
                 `,
         "description": `Хотите найти партнеров по сквошу? Тогда присоединяйтесь к нашему сообществу и играйте!`
       }
@@ -72,7 +76,7 @@
         "content": `<h1>Procura um parceiro <br> de squash em Lisboa?</h1>
                 <h2>Participe do nosso grupo no Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Entrar!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.webp" alt="squash">
                `,
         "description": `Você quer encontrar parceiros de squash? Então junte-se à nossa comunidade e jogue!`
       }
@@ -82,7 +86,7 @@
         "content": `<h1>Шукаєте партнера по<br>сквошу в Лісабоні?</h1>
                 <h2>Приєднуйтесь до нашої групи в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Приєднуйся зараз!</a>
-                <img src="assets/qr.png" alt="squash">
+                <img src="assets/qr.webp" alt="squash">
                 `,
         "description": `Хочете знайти партнерів зі сквошу? Тоді приєднуйтесь до нашої спільноти та грайте!`
       }
@@ -94,36 +98,30 @@ i18next.on('languageChanged', (lng) => {document.documentElement.setAttribute('l
 
 // Language switch buttons listeners
 
+function updatePageLanguage(t) {
+  document.getElementById('container').innerHTML = t('content'); 
+  document.querySelector('meta[name="description"]').setAttribute("content", t('description'));
+  document.querySelector('meta[name="og:description"]').setAttribute("content", t('description'));
+}
+
 document.getElementById('eng').addEventListener('click',()=> {
   document.getElementById('container').innerHTML = i18next.changeLanguage('en')
-  .then((t) => {
-    document.getElementById('container').innerHTML = t('content'); 
-    document.querySelector('meta[name="description"]').setAttribute("content", t('description'));
-  });
+  .then(updatePageLanguage);
 });
 
 document.getElementById('rus').addEventListener('click',()=> {
   i18next.changeLanguage('ru')
-  .then((t) => {
-    document.getElementById('container').innerHTML = t('content'); 
-    document.querySelector('meta[name="description"]').setAttribute("content", t('description'));
-  });
+  .then(updatePageLanguage);
 });
 
 document.getElementById('por').addEventListener('click',()=> {
   i18next.changeLanguage('pt')
-  .then((t) => {
-    document.getElementById('container').innerHTML = t('content'); 
-    document.querySelector('meta[name="description"]').setAttribute("content", t('description'));
-  });
+  .then(updatePageLanguage);
 });
 
 document.getElementById('ukr').addEventListener('click',()=> {
   i18next.changeLanguage('uk')
-  .then((t) => {
-    document.getElementById('container').innerHTML = t('content'); 
-    document.querySelector('meta[name="description"]').setAttribute("content", t('description'));
-  });
+  .then(updatePageLanguage);
 });
 
 </script>
