[update] Remove CLS problem

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
   <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-  <img src="assets/qr.webp" alt="QR-Code">
+  <img width="200px" height="200px" src="assets/qr.webp" alt="QR-Code">
 </main>
 
 <section class="lang-switcher-container">
@@ -56,7 +56,7 @@
         "content": `<h1>Looking for a squash<br>partner in Lisbon?</h1>
                 <h2>Join our group in Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-                <img src="assets/qr.webp" alt="squash">
+                <img width="200px" height="200px" src="assets/qr.webp" alt="squash">
                 `,
         "description": `Do you want to find squash partners? Then join our community and play!`
       }
@@ -66,7 +66,7 @@
         "content": `<h1>Ищете партнера по<br>сквошу в Лиссабоне?</h1>
                 <h2>Присоединяйтесь к нашей группе в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Присоединяйся сейчас!</a>
-                <img src="assets/qr.webp" alt="squash">
+                <img width="200px" height="200px" src="assets/qr.webp" alt="squash">
                 `,
         "description": `Хотите найти партнеров по сквошу? Тогда присоединяйтесь к нашему сообществу и играйте!`
       }
@@ -76,7 +76,7 @@
         "content": `<h1>Procura um parceiro <br> de squash em Lisboa?</h1>
                 <h2>Participe do nosso grupo no Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Entrar!</a>
-                <img src="assets/qr.webp" alt="squash">
+                <img width="200px" height="200px" src="assets/qr.webp" alt="squash">
                `,
         "description": `Você quer encontrar parceiros de squash? Então junte-se à nossa comunidade e jogue!`
       }
@@ -86,7 +86,7 @@
         "content": `<h1>Шукаєте партнера по<br>сквошу в Лісабоні?</h1>
                 <h2>Приєднуйтесь до нашої групи в Telegram</h2>
                 <a href="https://t.me/+BbHMaduO-aE1YmUy">Приєднуйся зараз!</a>
-                <img src="assets/qr.webp" alt="squash">
+                <img width="200px" height="200px" src="assets/qr.webp" alt="squash">
                 `,
         "description": `Хочете знайти партнерів зі сквошу? Тоді приєднуйтесь до нашої спільноти та грайте!`
       }
