[update] Unfollow join link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main id="container">
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
-  <a href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
+  <a rel=“nofollow” href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
   <img width="200px" height="200px" src="assets/qr.webp" alt="QR-Code">
 </main>
 
