[update] Add canonical URL

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="./style.css">
   <title>Squash partners Lisbon</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="canonical" href="https://squash.partners/" />
 </head>
 <body>
 <!-- partial:index.partial.html -->
