[update] Add Google verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="keywords" content="squash, find, play, Lisbon, partners, players"/>
   <meta name="revised" content="Friday, October 7th, 2022, 1:15 pm" />
   <meta name="google" content="notranslate" />
+  <meta name="google-site-verification" content="Zg3-G5zuZvlOBbZLZZteRXy88eJAG4w4hwCurQUrusk" />
   <meta property="og:url" content="https://squash.partners/">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Squash partners Lisbon">
@@ -30,7 +31,7 @@
   <h1>Looking for a squash<br>partner in Lisbon?</h1>
   <h2>Join our group in Telegram</h2>
   <a rel=“nofollow” href="https://t.me/+BbHMaduO-aE1YmUy">Join now!</a>
-  <img width="200px" height="200px" src="assets/qr.webp" alt="QR-Code">
+  <img width="200px" height="200px" src="assets/qr.webp" title="Join us with QR-code" alt="QR-Code">
 </main>
 
 <section class="lang-switcher-container">
