--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Do you want to find squash partners? Then join our community and play!"/>
-  <meta name="keywords" content="squash, find, play, Lisbon, partners, players"/>
+  <meta name="keywords" content="squash, find, play, Lisbon, partners, partner, players"/>
   <meta name="revised" content="Friday, October 7th, 2022, 1:15 pm" />
   <meta name="google" content="notranslate" />
   <meta name="google-site-verification" content="Zg3-G5zuZvlOBbZLZZteRXy88eJAG4w4hwCurQUrusk" />
@@ -20,7 +20,7 @@
   <meta name="twitter:description" content="Do you want to find squash partners? Then join our community and play!">
   <meta name="twitter:image" content="https://github.com/ZaharBozhok/squash.partners/blob/main/assets/squashers.jpg?raw=true">
   <link rel="stylesheet" href="./style.css">
-  <title>Squash partners Lisbon</title>
+  <title>Squash partner Lisbon</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
   <link rel="canonical" href="https://squash.partners/" />
 </head>
