--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Do you want to find squash partners? Then join our community and play!"/>
-  <meta name="keywords" content="squash, find, play, Lisbon, partners, partner, players"/>
+  <meta name="keywords" content="squash, find, play, Lisbon, partners, partner, players, community"/>
   <meta name="revised" content="Friday, October 7th, 2022, 1:15 pm" />
   <meta name="google" content="notranslate" />
   <meta name="google-site-verification" content="Zg3-G5zuZvlOBbZLZZteRXy88eJAG4w4hwCurQUrusk" />
